[package]
name = "todomvc"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "z"
lto = true

# cargo-leptos configuration
[package.metadata.leptos]
output-name = "todomvc"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/output.css"
assets-dir = "public"
site-addr = "0.0.0.0:8080"
reload-port = 3001
end2end-cmd = "cargo test --test e2e_tests"
browserquery = "defaults"

# Separate lib target for WASM (Leptos CSR)
[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"
