[package]
name = "todomvc"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = { version = "0.6", features = ["json"] }
web-sys = { version = "0.3", features = ["HtmlInputElement", "KeyboardEvent"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1"

[profile.release]
opt-level = "z"
lto = true

# cargo-leptos configuration
[package.metadata.leptos]
output-name = "todomvc"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/output.css"
tailwind-input-file = "style/input.css"
tailwind-config-file = "tailwind.config.js"
assets-dir = "public"
site-addr = "0.0.0.0:8080"
reload-port = 3001
end2end-cmd = "cargo test --test e2e_tests"
browserquery = "defaults"

# Separate lib target for WASM (Leptos CSR)
[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"
